# pydetplot

./: README.md  pyproject.toml
develop/: panel_0.yaml  panel_1.yaml  panel_2.yaml  panel_3.yaml  panel_4.yaml  panel_5.yaml  plotdet_example_01.ipynb  plotdet_example_02.ipynb
